# Ai-Agent-and-Agentic-Ai-Development

./: .gitignore  01-varable-if.ipynb  02-logical-loops-func.ipynb  03-arrays-dict-oop.ipynb  04-PyPi..ipynb  04-a-PyPi.ipynb  05-a-chatbot-vs-aiagent-Langgraph.ipynb  05-b-Streamlit.py  05-chatbot-vs-aiagent-Langgraph.ipynb  06-Langgraph-ReAct.ipynb  08-Memory-ReAct-Agent.ipynb  09-Search-Agent.ipynb  10-email-book-agent.ipynb  11-a-Agent-Switching-Swarm.ipynb  11-b-human-in-the-loop.ipynb  11-c-Deep-Agents-Langchain.ipynb  11-human-in-the-loop.ipynb  speak.vbs
12-streamlit/: agent.py  web.py  web_with_history.py
13-mcp/: .env  agent.py  book.json  math-tools-server.py  theoryImp.ipynb  web_with_history.py
14-a-n8n/: Auto Daily Blogs to Wordpress Blogging Site.json  Automatic monitoring of multiple URLs with downtime alerts.json  CVGrade-AIAUTOMATION.json  Email Automation.json  Email Automations.json  LeadFormSubmission.json
14-b-n8n-local-node/: Installation-Steps.txt  package-lock.json  package.json
14-c-n8n-local-deployment/: Dockerfile  package-lock.json  package.json
14-crewai/: installation.txt
14-n8n/: Ideas-list-content-email.json  Missing-Info-Sheet.json
15-crewai/: installation.txt
15-crewai/university/: pyproject.toml
15-crewai/university/src/university/: main.py
16-Autogen/: autogen.ipynb
17-FastAPI-1-INTRO/: main.py
17-FastAPI-2-MVC/: .env  main.py
17-FastAPI-3-AGENT/: .env  requirements.txt
18-FastAPI-Docker/: .env  Dockerfile  Readme.md  main.py
19-Agentic-RAG/: scripts.ipynb
20-RAG-Chroma-DB/: script.ipynb
(+16 files in other folders)
