[project]
name = "university"
version = "0.1.0"
description = "university using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
university = "university.main:run"
run_crew = "university.main:run"
train = "university.main:train"
replay = "university.main:replay"
test = "university.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
